--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>ru.eltex.app</groupId>
+
 	<artifactId>java</artifactId>
+
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>java</name>
+
 	<description>Demo project for Spring Boot</description>
+
 
 	<properties>
 		<!-- The main class to start by executing java -jar -->
 		<start-class>ru.eltex.app.java.lab7.Application</start-class>
 		<java.version>1.8</java.version>
 	</properties>
+
 
 	<dependencies>
 		<!--  Gson: Java to Json conversion -->
@@ -46,8 +55,20 @@
 			<version>1.2.17</version>
 		</dependency>
 
-	</dependencies>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.2.Final</version>
+		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
+		</dependency>
+
+	</dependencies>
 
 
     <build>
