--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>ru.eltex.app</groupId>
 
-	<artifactId>java</artifactId>
+	<artifactId>lab8</artifactId>
 
 	<version>0.0.1-SNAPSHOT</version>
 
