--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.voodoodyne.jackson.jsog</groupId>
+			<artifactId>jackson-jsog</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 </project>
