--- a/build.gradle
+++ b/build.gradle
@@ -1,162 +1,45 @@
-//group 'hb'
-//version '1.0-SNAPSHOT'
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE")
-        classpath 'mysql:mysql-connector-java:5.1.31'
-    }
-}
-
 plugins {
     id 'org.springframework.boot' version '2.1.8.RELEASE'
 }
 
-group = 'ru.eltex.app'
-
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'application'
-apply plugin: 'maven'
 
-sourceCompatibility = 1.8
 mainClassName = 'ru.eltex.app.java.lab8.QueryProcessingApplication'
-//mainClassName = 'ru.eltex.app.java.lab2.Main'
-
-//sourceCompatibility = JavaVersion.VERSION_1_7
-//targetCompatibility = JavaVersion.VERSION_1_7
-
-//jar {
-//    baseName = 'lab8'
-//    version =  '0.1.0'
-//}
 
 repositories {
     mavenCentral()
-    maven { url "http://repo.maven.apache.org/maven2" }
 }
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-tomcat"
-    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.8.RELEASE'
-    //compile group: 'org.springframework', name: 'org.springframework.web', version: '3.1.0.RELEASE'
-
-    //compile group: 'org.springframework.data', name: 'spring-data-commons', version: '2.1.10.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.1.8.RELEASE', ext: 'pom'
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile group: 'org.apache.servicemix.bundles', name: 'org.apache.servicemix.bundles.spring-data-commons', version: '2.1.10.RELEASE_1'
-    //compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.0.1.RELEASE'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
-
-    compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1"
-    testCompile "org.springframework.boot:spring-boot-starter-test"
-    //runtime('com.oracle:ojdbc7:12.1.0.2.0')
-    //runtime 'mysql:mysql-connector-java:5.1.29'
 
-//    compile "org.hibernate:hibernate:3.5.4-Final"
-//    compile "org.hibernate:hibernate-core:5.2.1.Final"
-//    compile "org.hibernate:hibernate-annotations:3.5.6-Final"
-//    compile "org.hibernate:hibernate-commons-annotations:3.2.0.Final"
-//    compile "org.hibernate:hibernate-gradle-plugin:5.2.1.Final"
-//    compile "org.hibernate:hibernate-tools:5.0.1.Final"
-//    compile "org.hibernate:hibernate-entitymanager:5.1.0.Final"
-
-    compile "mysql:mysql-connector-java:5.1.31"
-
-    //compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.2.Final'
-
-    compile('org.springframework.boot:spring-boot-starter-web:1.5.1.RELEASE')
-    compile('org.springframework.data:spring-data-commons:1.11.2.RELEASE')
-
+    compile group: 'org.springframework', name: 'spring-aspects', version:'3.1.2.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-commons', version:'2.1.10.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version:'2.1.10.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.8.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.1.8.RELEASE', ext: 'pom'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.8.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.1.7.RELEASE'
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-
-
-
-
-    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.1.7.RELEASE'
+    compile group: 'com.voodoodyne.jackson.jsog', name: 'jackson-jsog', version:'1.1.1'
     compile group: 'log4j', name: 'log4j', version:'1.2.17'
-    compile(group: 'org.hibernate', name: 'hibernate-core', version:'5.4.2.Final') {
-        exclude(module: 'xml-apis')
-    }
+    compile group: 'org.apache.servicemix.bundles', name: 'org.apache.servicemix.bundles.spring-data-commons', version: '2.1.10.RELEASE_1'
 
     compile(group: 'mysql', name: 'mysql-connector-java', version:'6.0.6') {
         exclude(module: 'protobuf-java')
     }
-
-    compile group: 'org.springframework.data', name: 'spring-data-commons', version:'2.1.10.RELEASE'
-    compile group: 'org.springframework.data', name: 'spring-data-jpa', version:'2.1.10.RELEASE'
-    compile group: 'org.springframework', name: 'spring-aspects', version:'3.1.2.RELEASE'
+    compile(group: 'org.hibernate', name: 'hibernate-core', version:'5.4.2.Final') {
+        exclude(module: 'xml-apis')
+    }
     compile(group: 'org.hibernate', name: 'hibernate-entitymanager', version:'5.2.3.Final') {
         exclude(module: 'xml-apis')
     }
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'2.1.7.RELEASE'
-    compile group: 'com.voodoodyne.jackson.jsog', name: 'jackson-jsog', version:'1.1.1'
+
+    testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'2.1.7.RELEASE'
-
-
-}
-
-/*jar {
-    manifest {
-        attributes(
-                'Main-Class': mainClassName,
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' ')
-        )
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}*/
-/*
-jar {
-    manifest.attributes("Main-Class": mainClassName);
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-*/
-task wrapper2(type: Wrapper) {
-    //gradleVersion = "1.12"
-    gradleVersion = "3.3"
-}
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'ru.eltex.app.java.lab8.QueryProcessingApplication'
-        )
-    }
-    /*from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }*/
-}
-
-task fatJar(type: Jar) {
-    classifier = 'all'
-
-    manifest {
-        attributes(
-                'Main-Class': 'ru.eltex.app.java.lab8.QueryProcessingApplication'
-        )
-    }
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-//        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-//    }
-//    from { (configurations.runtime).collect { it.isDirectory() ? it : zipTree(it) } }
-//    from {
-//            configurations..collect { it.isDirectory() ? it : zipTree(it) }
-//        }
-    with jar
 }
