--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-/src/main/java/ru/eltex/app/java/test/
-/.idea/
-/lib/
-/out/
-/target/
-lib
-out/production/labs_java/META-INF
-labs_java.iml
+/.gradle
+/.idea
+/.mvn
+/build
+/gradle
+/lib
+/out
+/src/main/java/ru/eltex/app/java/test
+/target
+gradlew
+gradlew.bat
+log_file.log
 orders.json
 orders.ser
-/src/main/java/ru/eltex/app/java/test/
-/src/main/java/ru/eltex/app/java/test/
-src/main/java/ru/eltex/app/java/test
+settings.gradle
